# axum_auth

./: .gitignore  Cargo.toml
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs
src/database/: mod.rs  users_db.rs  users_db_mock.rs
src/dtos/: mod.rs  user_dtos.rs
src/handlers/: auth_handlers.rs  authorized_handlers.rs  home_path_handlers.rs  mod.rs  wrong_path_handlers.rs
src/handlers/auth_handlers/: login_handler.rs  mod.rs  register_handler.rs
src/handlers/authorized_handlers/: authorized_persons_only_handler.rs  logout_handler.rs  mod.rs
src/middlewares/: auth_middleware.rs
src/middlewares/auth_middleware/: mod.rs  user_and_cookie_by_refresh_token.rs  user_and_cookie_by_token.rs
src/models/: user_model.rs
src/router/: auth_routes.rs  authorized_person_router.rs  mod.rs
src/router/api_routes/: auth_routes.rs  mod.rs
src/router/api_routes/authorized_routes/: authorized_person_router.rs  mod.rs
src/unit_tests/: auth_middleware_test.rs  authorized_persons_only_handler_test.rs  get_user_and_cookie_by_refresh_token_test.rs  get_user_and_cookie_by_token_test.rs  home_path_handlers_test.rs  lib_tests.rs  login_handler_test.rs  logout_handler_test.rs  mod.rs  register_handler_tests.rs  wrong_path_handlers_test.rs
src/utils/: mod.rs  password.rs  token.rs
tests/: integration_test.rs
tests/common/: config_mock.rs  db_mock.rs  mod.rs
tests/common/cases/: home_route.rs  login_user.rs  logout_test.rs  mod.rs  register_user.rs  unauthorize_req.rs  wrong_route.rs
tests/common/database_mock/: mod.rs  users_db_mock.rs
tests/common/utils_mock/: mod.rs
