[package]
name = "axum_auth_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
async-trait = "0.1.89"
tower = { version = "0.4", features = ["util"] }
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-macros = "0.5.1"
chrono = { version = "0.4.45", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version =  "10.4.0", features = ["rust_crypto"]}
rand_core = { version = "0.6", features = ["std"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [ "postgres", "runtime-tokio", "tls-native-tls", "chrono", "uuid" ] }
sqlx-cli = "0.9.0"
time = "0.3.53"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors","trace", "fs"] }
uuid = {version = "1.23.4", features = ["serde", "v4"]}
validator = { version = "0.20.0", features = ["derive"] }
